Made font smaller to hover text to fix overflowing

--- a/src/components/Categories/categories.css
+++ b/src/components/Categories/categories.css
@@ -24,7 +24,7 @@
 }
 
 .card-hovertext {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: bold;
   color: #dcdcdc;
 }
